# my-gemini-chatbot

./: README.md  pyproject.toml
my_gemini_chatbot/: main.py
my_gemini_chatbot/templates/: dadjokes.jinja  prompt.jinja  santaclaus.jinja
